align the reference place
by adding two <br/>…

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ padding-bottom:20px;
      height: 150px;
      width: 400px;
      text-decoration: none;
-     text-align:center-right;
+     text-align:center;
  }
  
 .btnFootSec:hover {
@@ -311,15 +311,15 @@ overflow: scroll;
      <div id="content" data-role = "content">
          <table width="100%" height="100%">
              <tr>
-                 <td align="center"><a id="AUTH-BKRF" class="btnMe" style="color:#2b9209;  float:right; position:relative;" href="javascript:nextPage();" >type your <br/>BOOKING REFERENCE</a></td>
+                 <td align="middle"><a id="AUTH-BKRF" class="btnMe" style="color:#2b9209;  float:right; position:relative;" href="javascript:nextPage();" ><br/><br/>type your <br/>BOOKING REFERENCE</a></td>
                  <th rowspan="3">SELECT AN OPTION<br/> TO LOCATE YOUR<br/> BOOKING</th>
-                 <td align="center"><a id="AUTH-AUPS" class="btnMe" style="color:#2b9209;  float:left; position:relative; " href="#page11" >scan your <br/>PASSPORT</a></td>
+                 <td align="center"><a id="AUTH-AUPS" class="btnMe" style="color:#2b9209;  float:left; position:relative; " href="#page11" ><br/><br/>scan your <br/>PASSPORT</a></td>
              </tr>
              <tr >
-                 <td align="center"><a id="AUTH-AUCC" class="btnMe" style="color:#2b9209;  float:right; position:relative;" >insert your <br/>CREDIT CARD</a></td>
+                 <td align="center"><a id="AUTH-AUCC" class="btnMe" style="color:#2b9209;  float:right; position:relative;" ><br/><br/>insert your <br/>CREDIT CARD</a></td>
              </tr>
              <tr >
-                 <td align="center"><a id="AUTH-AUBP" class="btnMe" style="color:#2b9209;  float:right; position:relative; " >scan your <br/>BORDING PASS</a></td>
+                 <td align="center"><a id="AUTH-AUBP" class="btnMe" style="color:#2b9209;  float:right; position:relative; " ><br/><br/>scan your <br/>BORDING PASS</a></td>
              </tr>
              </table>
          
