--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@ function getName(){
 .btnFootSec {
   -webkit-border-radius: 11;
   -moz-border-radius: 11;
-  border-radius: 11px;
+  border-radius: 15px;
   -webkit-box-shadow: 1px 1px 3px #666666;
   -moz-box-shadow: 1px 1px 3px #666666;
   box-shadow: 1px 1px 3px #666666;
   font-family: Arial;
   color: #000000;
-  font-size: 20px;
+  font-size: 30px;
   background: #ffffff;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
@@ -521,7 +521,7 @@ overflow: scroll;
          </div>
          <div id="content" data-role = "content">
              <div align="center"><img src="prohibited%20item.png"></div>
-             <div><center><br/><font size="6"><b>Are you carring any prohibited or restricted items listed above on board the aircraft?     </font></b></font></center></div>
+             <div><center><br/><font size="6"><b>Are you carrying any prohibited or restricted items listed above on board the aircraft?     </font></b></font></center></div>
              <br/><br/>
              <table width="30%" align="center">
                  <tr>
@@ -701,7 +701,7 @@ overflow: scroll;
              <center>Confirm</center>
          </div>
          <div id="content" data-role = "content">
-             <br/><br/><br/><br/>
+             <br/><br/>
              <table width="50%" height="100%"align="center" border = "3">
                  <tr>
                      <th>
@@ -711,16 +711,16 @@ overflow: scroll;
                  <tr width = "50%">
                      <td align="center" style="vertical-align:middle; text-align:left; padding-left: 25px;">
                                  <br/>
-                                 <font color="#696969">Flight</font><br/>
-                                 <b>SN 2103</b><br/><br/>
-                                 <font color="#696969">Itinerary</font><br/>
-                                 <b id="airline"></b><br/><br/>
-                                 <font color="#696969">Flight Date</font><br/>
-                                 <b>Wednesday, 5 Aug</b><br/><br/>
-                                 <font color="#696969">Flight Time</font><br/>
-                                 <b>16:00</b><br/><br/>
-                                 <font id="seat" color="#696969"></font><br/>
-                                 <b id="seatlabel"></b><br/><br/>
+                                 <font color="#696969" size="5">Flight</font><br/>
+                                 <font size="4"><b>SN 2103</b></font><br/><br/>
+                                 <font color="#696969" size="5">Itinerary</font><br/>
+                                 <font size="4"><b id="airline"></b></font><br/><br/>
+                                 <font color="#696969" size="5">Flight Date</font><br/>
+                                 <font size="4"><b>Wednesday, 5 Aug</b></font><br/><br/>
+                                 <font color="#696969" size="5">Flight Time</font><br/>
+                                 <font size="4"><b>16:00</b></font><br/><br/>
+                                 <font id="seat" color="#696969" size="5"></font><br/>
+                                 <font size="4"><b id="seatlabel"></b></font><br/><br/>
                          <script>
                              function displayAirline(num){
                                  var $airline = $('#airline');
@@ -938,7 +938,7 @@ overflow: scroll;
          </div>
          <div id="content" data-role = "content">
              <div align="center"><img src="luggage.png"></div>
-             <div><center><br/><font size="6"><b>Do you need to pay for extra bag?</b></font></center></div>
+             <div><center><br/><font size="6"><b>Do you need to pay for extra bags?</b></font></center></div>
              <br/><br/><br/><br/><br/>
              <table width="30%" align="center">
                  <tr>
