--- a/OrderTask/ordering.html
+++ b/OrderTask/ordering.html
@@ -117,6 +117,8 @@
                   <li data-value="interaction-design"><a href="#">Interaction Design</a></li>
                   <li data-value="product-design"><a href="#">Product Design</a></li>
                   <li data-value="industrial-design"><a href="#">Industrial Design</a></li>
+                  <li data-value="environmental-design"><a href="#">Environmental Design</a></li>
+                  <li data-value="experience-design"><a href="#">Experience Design</a></li>
                   <li data-value="other"><a href="#">Other</a></li>
                 </ul>
                 <input class="hidden hidden-field" name="occupation-value" readonly="readonly"
